# bgfx.meson

./: LICENSE  README.md  bgfx.wrap.sample  flake.nix  meson.build  meson.options
.github/: dependabot.yml
meson/bgfx/: meson.build  pch.h  pch.hpp
meson/bgfx/pch/: mesh_pch.h  pch.h
meson/bimg/: meson.build  pch.h  pch.hpp
meson/bimg/pch/: c_pch.h  cpp_pch.h
meson/bx/: meson.build  pch.hpp
meson/examples/: meson.build
meson/tools/: meson.build
meson/tools/geometryc/: meson.build
meson/tools/geometryv/: meson.build
meson/tools/shaderc/: meson.build
meson/tools/texturec/: meson.build
meson/tools/texturev/: meson.build
