shaderc_root = '../../../bgfx/tools/shaderc/'
bgfx_root = '../../../bgfx/'

fcpp_lib = static_library('fcpp', [
  bgfx_root + '3rdparty/fcpp/cpp1.c',
  bgfx_root + '3rdparty/fcpp/cpp2.c',
  bgfx_root + '3rdparty/fcpp/cpp3.c',
  bgfx_root + '3rdparty/fcpp/cpp4.c',
  bgfx_root + '3rdparty/fcpp/cpp5.c',
  bgfx_root + '3rdparty/fcpp/cpp6.c',
],
c_args: [
'-DNINCLUDE=64',
'-DNWORK=65536',
'-DNBUFF=65536',
'-DOLD_PREPROCESSOR=0',
])

glslang_lib = static_library('glslang', [
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/propagateNoContraction.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/reflection.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/preprocessor/PpScanner.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/preprocessor/PpTokens.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/preprocessor/PpAtom.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/preprocessor/PpContext.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/preprocessor/Pp.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/linkValidate.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/parseConst.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/iomapper.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/limits.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/intermOut.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/glslang_tab.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/attribute.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/Versions.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/SpirvIntrinsics.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/SymbolTable.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/ShaderLang.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/RemoveTree.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/Scan.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/ParseHelper.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/PoolAlloc.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/ParseContextBase.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/Intermediate.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/Initialize.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/IntermTraverse.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/Constant.cpp',
bgfx_root + '3rdparty/glslang/glslang/MachineIndependent/InfoSink.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslParseables.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslParseHelper.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslOpMap.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslGrammar.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslAttributes.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslScanContext.cpp',
bgfx_root + '3rdparty/glslang/glslang/HLSL/hlslTokenStream.cpp',
bgfx_root + '3rdparty/glslang/glslang/GenericCodeGen/Link.cpp',
bgfx_root + '3rdparty/glslang/glslang/GenericCodeGen/CodeGen.cpp',
bgfx_root + '3rdparty/glslang/glslang/CInterface/glslang_c_interface.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/doc.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/disassemble.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/SpvTools.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/SpvBuilder.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/SpvPostProcess.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/SPVRemapper.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/Logger.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/GlslangToSpv.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/InReadableOrder.cpp',
bgfx_root + '3rdparty/glslang/SPIRV/CInterface/spirv_c_interface.cpp',
bgfx_root + '3rdparty/glslang/OGLCompilersDLL/InitializeDll.cpp',
bgfx_root + '3rdparty/glslang/hlsl/stub.cpp',
bgfx_root + '3rdparty/glslang/glslang/OSDependent/Windows/ossource.cpp',
bgfx_root + '3rdparty/glslang/glslang/OSDependent/Web/glslang.js.cpp',
],
include_directories: [
  bgfx_root + '3rdparty',
  bgfx_root + '3rdparty/glslang',
  bgfx_root + '3rdparty/spirv-tools/include',
  bgfx_root + '3rdparty/spirv-tools/source',
],
cpp_args: [
  '-DENABLE_OPT=1',
  '-DENABLE_HLSL=1'
])

glsl_optimizer_lib = static_library('glsloptimizer', [
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_lexer.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/pp.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/glcpp-parse.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glcpp/glcpp-lex.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_types.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_variables.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_type.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/builtin_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_to_hir.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_function.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_array_index.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ast_expr.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/util/hash_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/util/ralloc.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/program/symbol_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/program/prog_hash_table.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa/main/imports.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/strtod.c',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/s_expression.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/standalone_scaffolding.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_tree_grafting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_swizzle_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_vectorize.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_noop_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_rebalance_tree.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_redundant_jumps.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_structure_splitting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_flip_matrices.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_function_inlining.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_if_simplification.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_minmax.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_code_local.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_flatten_nested_if_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_cse.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_builtin_variables.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_builtin_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_dead_code.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_propagation.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_variable.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_copy_propagation.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_copy_propagation_elements.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_algebraic.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_array_splitting.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/opt_constant_folding.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vector_insert.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vertex_id.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_variable_index_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vec_index_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vec_index_to_swizzle.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_vector.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_packed_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_packing_builtins.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_ubo_reference.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_named_interface_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_noise.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_offset_array.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_output_reads.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_instructions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_jumps.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_mat_op_to_vec.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_discard.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_discard_flow.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_if_to_cond_assign.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_controls.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_unroll.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/lower_clip_distance.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/loop_analysis.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/linker.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniforms.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_varyings.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_block_active_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_uniform_initializers.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_atomics.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_functions.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/link_interface_blocks.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_validate.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_variable_refcount.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_unused_structs.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_rvalue_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_stats.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_metal_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_print_glsl_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_hierarchical_visitor.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_hv_accept.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_import_prototypes.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function_can_inline.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_function_detect_recursion.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_constant_expression.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_equals.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_expression_flattening.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_builder.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_clone.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir_basic_block.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/hir_field_selection.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/ir.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_symbol_table.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_types.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_parser_extras.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_parser.cpp',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl/glsl_optimizer.cpp',
],
include_directories: [
  bgfx_root + '../bx/include/compat/msvc',
  bgfx_root + '3rdparty/glsl-optimizer/src',
  bgfx_root + '3rdparty/glsl-optimizer/include',
  bgfx_root + '3rdparty/glsl-optimizer/src/mesa',
  bgfx_root + '3rdparty/glsl-optimizer/src/node',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl',
],
cpp_args: [
  '/wd4291',
  '/wd4005'
])

spirv_cross_lib = static_library('spirvcross', [
  bgfx_root + '3rdparty/spirv-cross/spirv_parser.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_msl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_hlsl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_glsl.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_parsed_ir.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_util.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross_c.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cross.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cpp.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_cfg.cpp',
  bgfx_root + '3rdparty/spirv-cross/spirv_reflect.cpp',
],
include_directories: [
  bgfx_root + '3rdparty/spirv-cross/include'
],
cpp_args: [
  '-DSPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS'
])

spirv_opt_lib = static_library('spirvopt', [
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_scopes.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_small_type_uses.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_misc.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_mode_setting.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_non_uniform.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_literals.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_logicals.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_memory.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_memory_semantics.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_instruction.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_interfaces.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_layout.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_id.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_image.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_derivatives.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_execution_limitations.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_extensions.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_function.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_debug.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_decorations.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_composites.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_constants.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_conversion.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_builtins.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_capability.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_cfg.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_arithmetics.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_atomics.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_barriers.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_bitwise.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_adjacency.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_annotation.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/instruction.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/construct.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/function.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/basic_block.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/util/timer.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/util/parse_number.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/util/string_utils.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/util/bit_vector.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/text_handler.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/table.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/text.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_target_env.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_validator_options.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_fuzzer_options.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_optimizer_options.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_reducer_options.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/software_version.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/spirv_endian.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/structured_loop_to_selection_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/structured_loop_to_selection_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/simple_conditional_branch_to_branch_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/structured_construct_to_block_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/structured_construct_to_block_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_unused_struct_member_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/simple_conditional_branch_to_branch_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_struct_member_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_unused_instruction_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_instruction_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_selection_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_selection_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_block_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_function_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_function_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/reduction_util.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/remove_block_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/reduction_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/reducer.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/operand_to_dominating_id_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/operand_to_undef_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/pch_source_reduce.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/merge_blocks_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/operand_to_const_reduction_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/conditional_branch_to_simple_conditional_branch_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/merge_blocks_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/change_operand_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/change_operand_to_undef_reduction_opportunity.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/reduce/conditional_branch_to_simple_conditional_branch_opportunity_finder.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/pch_source.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/print.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/parsed_operand.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/wrap_opkill.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/value_number_table.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/vector_dce.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/workaround1209.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/unify_const_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/upgrade_memory_model.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/types.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/struct_cfg_analysis.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/type_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/strip_debug_info_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/strip_nonsemantic_info_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/ssa_rewrite_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/strength_reduction_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/scalar_replacement_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/set_spec_constant_default_value_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/simplification_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/scalar_analysis_simplification.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/replace_invalid_opc.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/scalar_analysis.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/remove_unused_interface_variables_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/replace_desc_array_access_using_var_index.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/register_pressure.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/relax_float_ops_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/remove_duplicates_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/redundancy_elimination.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/private_to_local_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/propagator.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/reduce_load_size.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/pass_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/pch_source_opt.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/optimizer.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/merge_return_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/module.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_utils.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/mem_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_unswitch_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_peeling.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_unroller.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_fusion.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_fusion_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_descriptor.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_fission.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_dependence.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/loop_dependence_helpers.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/local_single_store_elim_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/local_access_chain_convert_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/local_redundancy_elimination.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/local_single_block_elim_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/licm_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/ir_context.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/ir_loader.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/interp_fixup_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/instrument_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/instruction.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/instruction_list.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inst_buff_addr_check_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inst_debug_printf_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inst_bindless_check_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inline_opaque_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inline_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/graphics_robust_access_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/if_conversion.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/inline_exhaustive_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/freeze_spec_constant_value_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/function.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/folding_rules.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/fold.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/fold_spec_constant_op_and_composite_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/fix_storage_class.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/flatten_decoration_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/eliminate_dead_members_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/feature_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/eliminate_dead_functions_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/eliminate_dead_functions_util.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dominator_tree.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/eliminate_dead_constant_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/desc_sroa.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/desc_sroa_util.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dominator_analysis.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/def_use_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/debug_info_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/decoration_manager.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dead_branch_elim_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dead_insert_elim_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dead_variable_elimination.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/copy_prop_arrays.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/dataflow.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/convert_to_half_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/convert_to_sampled_image_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/constants.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/control_dependence.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/composite.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/const_folding_rules.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/combine_access_chains.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/compact_ids_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/cfg_cleanup_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/code_sink.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/build_module.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/ccp_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/cfg.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/block_merge_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/block_merge_util.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/amd_ext_to_khr.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/basic_block.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opt/aggressive_dead_code_elim_pass.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/opcode.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/operand.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/name_mapper.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/lint/divergence_analysis.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/lint/lint_divergent_derivatives.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/lint/linter.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/libspirv.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/link/linker.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/extensions.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/enum_string_mapping.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/ext_inst.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/diagnostic.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/disassemble.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/binary.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/assembly_grammar.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_type.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validation_state.cpp',
  bgfx_root + '3rdparty/spirv-tools/source/val/validate_primitives.cpp',
],

include_directories: [
  bgfx_root + '3rdparty/spirv-tools',
  bgfx_root + '3rdparty/spirv-tools/include',
  bgfx_root + '3rdparty/spirv-tools/include/generated',
  bgfx_root + '3rdparty/spirv-tools/source',
  bgfx_root + '3rdparty/spirv-headers/include',
])

shaderc_exe = executable('shaderc', [
  bgfx_root + 'src/shader_dxbc.cpp',
  bgfx_root + 'src/shader.cpp',
  bgfx_root + 'src/shader_spirv.cpp',
  bgfx_root + 'src/shader_dx9bc.cpp',
  bgfx_root + 'src/vertexlayout.cpp',
  shaderc_root + 'shaderc_glsl.cpp',
  shaderc_root + 'shaderc_hlsl.cpp',
  shaderc_root + 'shaderc_metal.cpp',
  shaderc_root + 'shaderc_pssl.cpp',
  shaderc_root + 'shaderc_spirv.cpp',
  shaderc_root + 'shaderc.cpp'
  ],
  link_with: [
    fcpp_lib,
    glslang_lib,
    glsl_optimizer_lib,
    spirv_cross_lib,
    spirv_opt_lib
  ], 
  dependencies: [
    bx_dep,
    bimg_dep,
    bgfx_dep
  ],
  include_directories: [
  bgfx_root + '3rdparty',
  bgfx_root + '3rdparty/webgpu/include',
  bgfx_root + '3rdparty/dxsdk/include',
  bgfx_root + '3rdparty/fcpp',
  bgfx_root + '3rdparty/glslang/glslang/Public',
  bgfx_root + '3rdparty/glslang/glslang/Include',
  bgfx_root + '3rdparty/glslang',
  bgfx_root + '3rdparty/glsl-optimizer/include',
  bgfx_root + '3rdparty/glsl-optimizer/src/glsl',
  bgfx_root + '3rdparty/spirv-cross',
  bgfx_root + '3rdparty/spirv-tools/include',
  bgfx_root + '3rdparty/glsl-optimizer/include/c99',
]
)